@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-01-30 Added backend_qtagg.py provided by Sigve Tjora - SC
+
 2005-01-28 Replaced examples/interactive.py with an updated script from
            Fernando Perez - SC
 
